[package]
name = "aoc_2021"
version = "0.1.0"
authors = ["Rudyard Richter <rudyardrichter@uchicago.edu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bitvec = "0.22.3"
geo = "0.18.0"
itertools = "0.10.1"
num = "0.4.0"
